added balance changes
